--- a/Readme
+++ b/Readme
@@ -8,3 +8,6 @@ The goal of the game is to have a player load into a random level and then have 
 fight the monsters to get their loot and the levels tresure chest. Each level has an exit which goes to another level.
 
 there will be levels and health and item and it will be a regular rougelike party blowout.
+
+The graphics right now are very temporary. The player, tree and bush are from pokemon. The boulder and wall are from dcss, 
+which for the time being (meaning while I'm still playing around and figuring stuff out) most will probably come from there from now on.
